Implement nickname update
